pid for pitch and roll

--- a/basestation/index.html
+++ b/basestation/index.html
@@ -109,6 +109,7 @@
     <script type="text/javascript" src="models/commandModel.js"></script>
     <script type="text/javascript" src="models/attitudeModel.js"></script>
     <script type="text/javascript" src="models/gpsModel.js"></script>
+    <script type="text/javascript" src="models/motorModel.js"></script>
     <script type="text/javascript" src="controller/radio.js"></script>
     <script type="text/javascript" src="views/chartView.js"></script>
     <script type="text/javascript" src="views/commander.js"></script>
